--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+    </div class="field">
+    <%= f.label :user_id %>
+    <%= f.collection_select(:user_id, User.all, :id, :name) %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
