--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :completed %><br>
     <%= f.check_box :completed %>
   </div>
+    </div class="field">
+    <%= f.label :list_id %>
+    <%= f.collection_select(:list_id, List.all, :id, :name) %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
